Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32654

Transition arrow won't stay at snapped vertical or horizontal position

XMLWordPrintable

    • Windows
    • 39edf3537 (master), 8de83607e (master)

      When editing SCXML files in Creator, when you click/drag a start or end point of a transition, while you're dragging it will automatically snap to vertical/horizontal when you get close (which is good) but then when you let go of the transition point, it moves to a place that makes the transition no longer horizontal/vertical.

      See attached video.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            olivier.decanniere Olivier De Cannière
            tommimtauriainen Tommi M. Tauriainen
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes